a merge soran tovabbra is letrejohetnek parhuzamos ajtok